fixed spacing

--- a/web-app/src/components/pages/home.css
+++ b/web-app/src/components/pages/home.css
@@ -134,10 +134,11 @@
   font-family: "Enriqueta-Regular";
   padding: 2vw;
   color: #3E3E3E;
+  margin-top: 4vw;
 }
 
 .values-subheading {
-  margin-top: 1vw;
+  margin-top: 3vw;
   font-size: 2.5vw;
   font-family: "Enriqueta-Regular";
   padding: 0.5vw;
@@ -149,7 +150,7 @@
   padding: 1vw;
   color: #3E3E3E;
   margin-left: -0.2vw;
-  margin-top: -2vw;
+  margin-top: 1vw;
   margin-bottom: 4vw;
   max-width: 90%;
   font-size: 3vw;
@@ -218,6 +219,7 @@
   font-family: "Enriqueta-Regular";
   font-size: 3vw;
   color: #3E3E3E;
+  margin-top: 3vw;
 }
 
 .slideshow {
